View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026056 | Open CASCADE | OCCT:Visualization | public | 2015-04-10 18:59 | 2016-04-20 15:51 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026056: AIS_LengthDimension can not build dimension for face-edge or edge-face | ||||
Description | Dear aba, please check code inside AIS_LengthDimension::InitTwoShapesPoints method: 1. In case when theFirstShape is TopAbs_FACE there is following code: (line 580) else if (theFirstShape.ShapeType() == TopAbs_EDGE) 2. In case when theFirstShape is TopAbs_EDGE there is no check that theSecondShape can be TopAbs_FACE In AIS_LengthDimension::InitEdgeFaceLength method: aCurve returned by AIS::ComputeGeometry will not be a Geom_TrimmedCurve, so GeomAPI_ExtremaCurveSurface aDistAdaptor (aCurve, aSurface) will return the result of the intersection of line and surface. Also take into account that the aDistAdaptor.NearestPoints will throw out of range exception if the edge is parallel to the face. Currently GeomAPI_ExtremaCurveSurface does not provide an interface to check such situations, so separate issue for this task will be created. | ||||
Steps To Reproduce | bugs/vis/bug26506 | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis bug26056 | ||||
|
Branch CR26056 has been created by aba. SHA-1: b5595baf3f63116eb4e0e24f3bb4d916297ae4c9 Detailed log of new commits: Author: aba Date: Wed Nov 11 13:41:59 2015 +0300 0026056: AIS_LengthDimension can not build dimension for face-edge or edge-face - Correct AIS_LengthDimension::InitEdgeFaceLength() method to support face-edge and edge-face cases - Correct test command to support face-edge and edge-face input geomerty without custom plane |
|
Branch CR26056 has been updated forcibly by aba. SHA-1: debbadc4975635e73f810be08536aa96545612a4 |
|
Dear kgv, could you please review the branch CR26056? |
|
Please test the patch. |
|
Dear BugMaster, Branch CR26056 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: debbadc4975635e73f810be08536aa96545612a4 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 147 (149 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR26056-master-occt-64/Debian70-64/bugs/vis/bug26056.html http://occt-tests/CR26056-master-occt-64/Windows-64-VC10/bugs/vis/bug26056.html bugs vis bug26056: OK Testing on Linux: occt component : Total MEMORY difference: 92848112 / 92267765 [+0.63%] Total CPU difference: 19652.37999999979 / 19655.13999999985 [-0.01%] products component : Total MEMORY difference: 26243399 / 26273564 [-0.11%] Total CPU difference: 7931.149999999986 / 7540.919999999997 [+5.17%] Testing on Windows: occt component : Total MEMORY difference: 58467514 / 58098316 [+0.64%] Total CPU difference: 18473.82562119874 / 18063.542991198887 [+2.27%] products component : Total MEMORY difference: 17261256 / 17166598 [+0.55%] Total CPU difference: 5636.862133499969 / 5624.304052999975 [+0.22%] There are following differences in images found by testdiff. http://occt-tests/CR26056-master-occt-64/Debian70-64/diff-Debian70-64.html http://occt-tests/CR26056-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html IMAGE bugs vis bug26317: bug26317.png differs |
|
Dear aba, could you please review following test case bugs vis bug26056 |
|
Dear aba, Branch CR26056 has been rejected due to: - differences in images |
|
Dear mkv, result of bugs vis bug26056 is correct. Please note that result of bugs vis bug26317 was changed (new behavior). |
|
Dear BugMaster, Branch CR26056 is TESTED. |
|
Branch CR26056 has been deleted by kgv. SHA-1: debbadc4975635e73f810be08536aa96545612a4 |
occt: master 1c078d3b 2015-11-11 10:41:59
Committer: bugmaster Details Diff |
0026056: AIS_LengthDimension can not build dimension for face-edge or edge-face - Correct AIS_LengthDimension::InitEdgeFaceLength() method to support face-edge and edge-face cases - Correct test command to support face-edge and edge-face input geomerty without custom plane |
Affected Issues 0026056 |
|
mod - src/AIS/AIS_LengthDimension.cxx | Diff File | ||
mod - src/AIS/AIS_LengthDimension.hxx | Diff File | ||
mod - src/ViewerTest/ViewerTest_RelationCommands.cxx | Diff File | ||
add - tests/bugs/vis/bug26056 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-04-10 18:59 |
|
New Issue | |
2015-04-10 18:59 |
|
Assigned To | => aba |
2015-04-10 18:59 |
|
Description Updated | |
2015-04-27 19:23 | kgv | Target Version | 6.9.0 => 7.1.0 |
2015-11-11 13:42 |
|
Status | new => assigned |
2015-11-11 13:42 | git | Note Added: 0048056 | |
2015-11-11 13:44 | git | Note Added: 0048057 | |
2015-11-11 13:46 |
|
Note Added: 0048058 | |
2015-11-11 13:46 |
|
Assigned To | aba => kgv |
2015-11-11 13:46 |
|
Status | assigned => resolved |
2015-11-11 13:46 |
|
Steps to Reproduce Updated | |
2015-11-11 14:01 | kgv | Note Added: 0048060 | |
2015-11-11 14:01 | kgv | Assigned To | kgv => bugmaster |
2015-11-11 14:01 | kgv | Status | resolved => reviewed |
2015-11-11 14:01 | kgv | Target Version | 7.1.0 => 7.0.0 |
2015-11-11 14:48 |
|
Assigned To | bugmaster => mkv |
2015-11-12 12:38 |
|
Note Added: 0048097 | |
2015-11-12 12:38 |
|
Note Added: 0048098 | |
2015-11-12 12:39 |
|
Note Added: 0048099 | |
2015-11-12 12:39 |
|
Assigned To | mkv => aba |
2015-11-12 12:39 |
|
Status | reviewed => feedback |
2015-11-12 12:39 |
|
Test case number | => bugs vis bug26056 |
2015-11-12 12:57 |
|
Note Added: 0048102 | |
2015-11-12 12:58 |
|
Assigned To | aba => mkv |
2015-11-12 13:00 |
|
Note Added: 0048104 | |
2015-11-12 13:00 |
|
Assigned To | mkv => bugmaster |
2015-11-12 13:00 |
|
Status | feedback => tested |
2015-11-12 13:02 |
|
Note Edited: 0048102 | |
2015-11-13 11:53 | bugmaster | Changeset attached | => occt master 1c078d3b |
2015-11-13 11:53 | bugmaster | Status | tested => verified |
2015-11-13 11:53 | bugmaster | Resolution | open => fixed |
2016-04-17 14:19 | git | Note Added: 0053119 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:51 |
|
Status | verified => closed |