0026056: AIS_LengthDimension can not build dimension for face-edge or edge-face

- Correct AIS_LengthDimension::InitEdgeFaceLength() method to support face-edge and edge-face cases
- Correct test command to support face-edge and edge-face input geomerty without custom plane